--- a/INSTALL
+++ b/INSTALL
@@ -53,7 +53,7 @@ human-readable output (unlike automake ...).
 
 Have fun,
 
-  Gerd
+  Farshid
 
 -- 
-Gerd Knorr <kraxel@bytesex.org>
+Farshid Ashouri <farshid@rodmena.co.uk>
